[package]
name = "compile_bot"
description = "Discord bot for run your code!"
version = "0.1.0"
edition = "2021"
authors = ["Blin4ik <https://github.com/Blinc13>"]


[profile.dev]
strip = true

[profile.release]
opt-level = 3
strip = true


[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["http", "client", "model", "builder", "cache", "rustls_backend", "gateway"]

[dependencies.tokio]
version = "1.24.1"
features = ["fs", "process", "rt", "time", "rt-multi-thread"]

[dependencies.tracing]
version = "0.1.37"
features = ["log", "attributes"]

[dependencies]
libc = "0.2.139"
sys-info = "0.9.1"
tracing-subscriber = "0.3.16"